clang/test/BSC/Negative/Ownership/RuleCheck/borrow_owned_var/borrow_owned_var.cbs
// RUN: %clang_cc1 -verify %s

extern void* malloc(unsigned long);
extern void free(void *);

_Owned struct S{
_Public:
    int data;
    int* _Owned p;
    ~S(S this) {
        free(__move_to_raw(this.p));
    } 
};

void borrow_p(int* _Borrow p);

void modify(S* _Borrow s) {
    s->data = 1024;
}

void move(S s) {
}

void test1() {
  int* _Owned p = __take_from_raw((int *)malloc(sizeof(int)));
  S s = {.p = p, .data = 42};
  modify(&_Mut s);
  move(s);
  modify(&_Mut s); // expected-error {{use of moved value: `s`}}
}

void test2() {
  int* _Owned p = __take_from_raw((int *)malloc(sizeof(int)));
  S s = {.p = p, .data = 42};
  modify(&_Mut s);
  move(s);
}

void test3() {
  int* _Owned p = __take_from_raw((int *)malloc(sizeof(int)));
  S s = {.p = p, .data = 42};
  borrow_p(&_Mut *s.p);
  borrow_p(&_Mut s.data);
  move(s);
}

typedef struct R {
  int* _Owned a;
  int* _Owned b;
} R;

R* _Owned initR();
void consumeR(R* _Owned);

void test4() {
  R* _Owned r = initR();
  borrow_p(&_Mut *r->a);
  borrow_p(&_Mut *r->b);
  consumeR(r);
}

void test5() {
  R* _Owned r = initR();
  R* _Owned rr = r;
  int* a = __move_to_raw(r->a); // expected-error {{use of moved value: `r.a`}}
  borrow_p(&_Mut *r->a); // expected-error {{use of moved value: `r.a`}}
  borrow_p(&_Mut *r->b); // expected-error {{use of moved value: `r.b`}}
  consumeR(rr);
}
